адаптив без футера и хедера

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <!-- <header class="header">
         <div class="container">
             <nav class="nav">
                 <ul class="menu">
@@ -34,13 +34,13 @@
                 <a class="phone" href="tel:++380504565656">+38 050-456-56-56</a>
             </nav>
         </div>
-    </header>
+    </header> -->
     <main>
         <section class="hero">
             <div class="container">
                 <h1 class="hero__title">IPHONE 14 PRO</h1>
                 <img class="hero__img" src="./images/iphone_14_pro_finish_unselect_gallery_1_202209_GEO_US_removebg.png"
-                    alt="IPHONE 14 PRO">
+                    alt="IPHONE 14 PRO" width="937">
                 <a class="hero__btn" href="">ВЫБРАТЬ</a>
             </div>
         </section>
@@ -65,7 +65,7 @@
                             условиях недостаточной освещенности) и сенсор основной камеры.
                         </b>
                     </div>
-                    <img class="new__img" src="/images/Apple-iPhone-14-Pro-Max 1.jpg" alt="Apple-iPhone-14-Pro-Max 1"
+                    <img class="new__img" src="./images/Apple-iPhone-14-Pro-Max 1.jpg" alt="Apple-iPhone-14-Pro-Max 1"
                         width="350">
                 </div>
             </div>
@@ -75,22 +75,22 @@
                 <h2 class="subtitle">ВЫБЕРИ СВОЙ ЦВЕТ</h2>
                 <ul class="color__list">
                     <li class="color__item">
-                        <img class="color__img" src="/images/silver 1.jpg" alt="">
+                        <img class="color__img" src="./images/silver 1.jpg" alt="Silver">
                         <h3 class="color__title">Silver</h3>
                         <p class="color__text">Серебристый</p>
                     </li>
                     <li class="color__item">
-                        <img class="color__img" src="/images/purple.jpg" alt="">
+                        <img class="color__img" src="./images/purple.jpg" alt="Deep purpl">
                         <h3 class="color__title">Deep purple</h3>
                         <p class="color__text">Темно фиолетовый</p>
                     </li>
                     <li class="color__item">
-                        <img class="color__img" src="/images/голд.jpg" alt="">
+                        <img class="color__img" src="./images/голд.jpg" alt="">
                         <h3 class="color__title">Gold</h3>
                         <p class="color__text">Золотой</p>
                     </li>
                     <li class="color__item">
-                        <img class="color__img" src="/images/black.jpg" alt="">
+                        <img class="color__img" src="./images/black.jpg" alt="">
                         <h3 class="color__title">Space Black</h3>
                         <p class="color__text">Космический черный</p>
                     </li>
@@ -100,6 +100,7 @@
         <section class="contacts">
             <div class="container">
                 <div class="contacts__inner">
+
                     <form class="contacts__form" action="#">
                         <h2 class="subtitle">ХОЧЕШЬ IPHONE 14 PRO?</h2>
                         <input class="contacts__input" type="text" placeholder="Ваше имя">
@@ -107,7 +108,7 @@
                         <p class="contacts__text">В ближайшее время наш менеджер свяжется с Вами</p>
                         <button class="contacts__btn" type="submit">ЗАКАЗАТЬ</button>
                     </form>
-                    <img src="/images/form-hero.jpg" alt="" class="form__hero" width="600">
+                    <img class="contacts__img" src="/images/form-hero.jpg" alt="" class="form__hero" width="600">
                 </div>
             </div>
         </section>
@@ -124,4 +125,5 @@
         </div>
     </footer>
 </body>
+
 </html>
