--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
 </head>
 
 <body>
-    <!-- <header class="header">
+    <header class="header">
         <div class="container">
             <nav class="nav">
+                <button class="menu__btn">
+                    <span class="menu__btn-line"></span>
+                    <span class="menu__btn-line"></span>
+                    <span class="menu__btn-line"></span>
+                    <span class="menu__btn-line"></span>
+                </button>
                 <ul class="menu">
                     <li class="menu__item">
                         <a class="menu__link" href="">Что нового</a>
@@ -34,7 +40,7 @@
                 <a class="phone" href="tel:++380504565656">+38 050-456-56-56</a>
             </nav>
         </div>
-    </header> -->
+    </header>
     <main>
         <section class="hero">
             <div class="container">
@@ -116,14 +122,15 @@
     <footer class="footer">
         <div class="container">
             <div class="footer__inner">
-                <a class="footer__link"  href="">Политика конфиденциальности</a>
-            <a class="logo" href="">
-                <img class="logo__img" src="./images/logo.svg" alt="Логотип">
-            </a>
-            <a class="phone" href="tel:++380504565656">+38 050-456-56-56</a>
+                <a class="footer__link" href="">Политика конфиденциальности</a>
+                <a class="logo" href="">
+                    <img class="logo__img" src="./images/logo.svg" alt="Логотип">
+                </a>
+                <a class="phone" href="tel:++380504565656">+38 050-456-56-56</a>
             </div>
         </div>
     </footer>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
