--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <p class="contacts__text">В ближайшее время наш менеджер свяжется с Вами</p>
                         <button class="contacts__btn" type="submit">ЗАКАЗАТЬ</button>
                     </form>
-                    <img class="contacts__img" src="/images/form-hero.jpg" alt="" class="form__hero" width="600">
+                    <img class="contacts__img" src="./images/form-hero.jpg" alt="" class="form__hero" width="600">
                 </div>
             </div>
         </section>
